# tycoonLE

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
benchmark/config/: openrouter-models.mjs  tasks.json
benchmark/fixtures/: baseline-trajectory-notes.json
benchmark/lib/: fs.mjs  openrouter.mjs  prompts.mjs  scoring.mjs
benchmark/scripts/: extract-results.mjs  generate-tasks.mjs  run-openrouter.mjs
notebooks/: 01_quickstart_rollout.py  02_action_candidates_and_rewards.py  03_jax_rollouts_and_training_smoke.py
notebooks/__marimo__/session/: 01_quickstart_rollout.py.json  02_action_candidates_and_rewards.py.json  03_jax_rollouts_and_training_smoke.py.json
public/: sample-replay.json
src/: App.tsx  styles.css
src/benchmark/: data.ts
src/components/: BenchmarkPage.tsx  GameCanvas.tsx  ReplayCharts.tsx
src/render/: assets.ts  iso.ts
src/sim/: replay.ts  types.ts
